force-app/main/default/objects/Offer_Master__c/Offer_Master__c.object-meta.xml
<CustomObject>
    <label>Offer Master</label>
    <nameField>
        <label>Offer Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>