force-app/main/default/objects/Offer_Master__c/fields/Discount_Category__c.field-meta.xml
<CustomField>
    <fullName>Discount_Category__c</fullName>
    <label>Discount Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monetary</fullName>
            </value>
            <value>
                <fullName>Non monetary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>