force-app/main/default/objects/Offer_Master__c/fields/Offer_type__c.field-meta.xml
<CustomField>
    <fullName>Offer_type__c</fullName>
    <label>Offer type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Non Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>