force-app/main/default/objects/Offer_Master__c/fields/Offer_Value__c.field-meta.xml
<CustomField>
    <fullName>Offer_Value__c</fullName>
    <label>Offer Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>