force-app/main/default/objects/Offer_Master__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Offer Master</relationshipLabel>
    <relationshipName>Offer_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>