force-app/main/default/objects/Offer_Master__c/fields/Project_Unit__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit</label>
    <referenceTo>Project_Unit__c</referenceTo>
    <relationshipLabel>Offer Master</relationshipLabel>
    <relationshipName>Offer_Master</relationshipName>
    <type>Lookup</type>
</CustomField>