force-app/main/default/objects/Offer_Master__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Offer Master</relationshipLabel>
    <relationshipName>Offer_Master</relationshipName>
    <type>Lookup</type>
</CustomField>