force-app/main/default/objects/Offer_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offer_type__c</columns>
    <columns>Discount_Category__c</columns>
    <columns>Offer_Value__c</columns>
    <columns>Monetizable__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>